<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MenuActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:text="@string/orderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orderTextView" />

    <ListView
        android:layout_width="match_parent"
        android:id="@+id/itemsOrdered"
        android:layout_height="277dp"
        android:choiceMode="singleChoice"
        android:listSelector="?attr/colorControlHighlight" />

    <Button
        android:text="Remove Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/removeItemButton"
        android:onClick="removeItem" />

    <TextView
        android:text="@string/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameField" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumView"
        android:text="@string/label_phoneNum" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneNumField" />

    <Button
        android:text="Place Order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orderButton"
        android:onClick="updateOrder" />
</LinearLayout>
